--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "react": "^18.0.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
