--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.0.0",
+    "react-use": "^17.6.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
