--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.13.3",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.3.0",
     "react-dom": "^18.0.0",
     "react-use": "^17.6.0",
     "sonner": "^2.0.1",
