--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.1",
@@ -25,7 +26,9 @@
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
+    "ra-data-simple-rest": "^4.16.12",
     "react": "^18.0.0",
+    "react-admin": "^4.16.12",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.3.0",
     "react-dom": "^18.0.0",
